FIX: some alignment issues and add video

--- a/src/components/home/enterUnberry/styles.scss
+++ b/src/components/home/enterUnberry/styles.scss
@@ -43,6 +43,22 @@
   .description {
     color: $white;
     font-size: 18px;
+
+    @include mobile {
+
+      br {
+        display: none;
+      }
+    }
+  }
+
+  // video-frame
+  .video-frame {
+
+    video {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .timeline-style {
