--- a/src/components/home/rapidlyEvolving/styles.scss
+++ b/src/components/home/rapidlyEvolving/styles.scss
@@ -56,7 +56,7 @@
     margin-top: 30px;
     display: flex;
     align-items: flex-start;
-    opacity: 0.1;
+    opacity: 0.9;
     transition: all 0.5s ease-in-out;
 
     @include mobile {
